@@ -22,54 +22,56 @@
  * THE SOFTWARE.
  */
 
-package edu.ucr.cs.riple.core.global;
+package edu.ucr.cs.riple.core.cache.downstream;
 
-import com.google.common.collect.ImmutableMultimap;
+import static com.google.common.collect.ImmutableMap.toImmutableMap;
+
+import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.ImmutableSet;
-import com.google.common.collect.Multimaps;
 import edu.ucr.cs.riple.core.Config;
 import edu.ucr.cs.riple.core.ModuleInfo;
 import edu.ucr.cs.riple.core.Report;
+import edu.ucr.cs.riple.core.cache.BaseCache;
+import edu.ucr.cs.riple.core.cache.Impact;
 import edu.ucr.cs.riple.core.evaluators.suppliers.DownstreamDependencySupplier;
 import edu.ucr.cs.riple.core.metadata.index.Error;
 import edu.ucr.cs.riple.core.metadata.index.Fix;
 import edu.ucr.cs.riple.core.metadata.method.MethodDeclarationTree;
-import edu.ucr.cs.riple.core.metadata.method.MethodNode;
 import edu.ucr.cs.riple.core.metadata.trackers.MethodRegionTracker;
 import edu.ucr.cs.riple.core.util.Utility;
 import edu.ucr.cs.riple.injector.changes.AddMarkerAnnotation;
 import edu.ucr.cs.riple.injector.location.Location;
 import edu.ucr.cs.riple.injector.location.OnMethod;
 import edu.ucr.cs.riple.injector.location.OnParameter;
-import java.util.Optional;
+import java.util.Collection;
 import java.util.OptionalInt;
 import java.util.Set;
-import java.util.stream.Collectors;
+import java.util.function.Function;
 import java.util.stream.Stream;
 import javax.annotation.Nullable;
 
-/** Implementation for {@link GlobalAnalyzer} interface. */
-public class GlobalAnalyzerImpl implements GlobalAnalyzer {
+/** Implementation for {@link DownstreamImpactCache} interface. */
+public class DownstreamImpactCacheImpl
+    extends BaseCache<MethodImpact, ImmutableMap<Location, MethodImpact>>
+    implements DownstreamImpactCache {
 
   /** Set of downstream dependencies. */
   private final ImmutableSet<ModuleInfo> downstreamModules;
-  /** Public APIs in the target modules that have a non-primitive return value. */
-  private final ImmutableMultimap<Integer, MethodImpact> methods;
-  /** Annotator Config. */
-  private final Config config;
-  /** Method declaration tree instance. */
-  private final MethodDeclarationTree tree;
 
-  public GlobalAnalyzerImpl(Config config, MethodDeclarationTree tree) {
-    this.config = config;
+  public DownstreamImpactCacheImpl(Config config, MethodDeclarationTree tree) {
+    super(
+        config,
+        tree.getPublicMethodsWithNonPrimitivesReturn().stream()
+            .map(
+                methodNode ->
+                    new MethodImpact(
+                        new Fix(
+                            new AddMarkerAnnotation(methodNode.location, config.nullableAnnot),
+                            null,
+                            true)))
+            .collect(toImmutableMap(Impact::toLocation, Function.identity())),
+        tree);
     this.downstreamModules = config.downstreamInfo;
-    this.tree = tree;
-    this.methods =
-        Multimaps.index(
-            tree.getPublicMethodsWithNonPrimitivesReturn().stream()
-                .map(MethodImpact::new)
-                .collect(ImmutableSet.toImmutableSet()),
-            MethodImpact::hashCode);
   }
 
   @Override
@@ -82,11 +84,11 @@ public class GlobalAnalyzerImpl implements GlobalAnalyzer {
     MethodRegionTracker tracker = new MethodRegionTracker(config, config.downstreamInfo, tree);
     // Generate fixes corresponding methods.
     ImmutableSet<Fix> fixes =
-        methods.values().stream()
+        store.values().stream()
             .filter(
                 input ->
                     !tracker
-                        .getCallersOfMethod(input.node.location.clazz, input.node.location.method)
+                        .getCallersOfMethod(input.toMethod().clazz, input.toMethod().method)
                         .isEmpty()) // skip methods that are not called anywhere.
             .map(
                 methodImpact ->
@@ -94,24 +96,24 @@ public class GlobalAnalyzerImpl implements GlobalAnalyzer {
                         new AddMarkerAnnotation(
                             new OnMethod(
                                 "null",
-                                methodImpact.node.location.clazz,
-                                methodImpact.node.location.method),
+                                methodImpact.toMethod().clazz,
+                                methodImpact.toMethod().method),
                             config.nullableAnnot),
                         "null",
                         false))
             .collect(ImmutableSet.toImmutableSet());
-    DownstreamImpactEvaluator analyzer =
+    DownstreamImpactEvaluator evaluator =
         new DownstreamImpactEvaluator(new DownstreamDependencySupplier(config, tracker, tree));
-    ImmutableSet<Report> reports = analyzer.evaluate(fixes);
+    ImmutableSet<Report> reports = evaluator.evaluate(fixes);
     // Update method status based on the results.
-    methods
+    this.store
         .values()
         .forEach(
             method -> {
-              MethodNode node = method.node;
-              Set<OnParameter> impactedParameters = analyzer.getImpactedParameters(node.location);
+              Set<OnParameter> impactedParameters =
+                  evaluator.getImpactedParameters(method.fix.toMethod());
               reports.stream()
-                  .filter(input -> input.root.toMethod().equals(node.location))
+                  .filter(input -> input.root.toMethod().equals(method.toMethod()))
                   .findAny()
                   .ifPresent(report -> method.setStatus(report, impactedParameters));
             });
@@ -125,48 +127,39 @@ public class GlobalAnalyzerImpl implements GlobalAnalyzer {
    * @return Corresponding {@link MethodImpact}, null if not located.
    */
   @Nullable
-  private MethodImpact fetchMethodImpactForFix(Fix fix) {
+  @Override
+  public MethodImpact fetchImpact(Fix fix) {
     if (!fix.isOnMethod()) {
+      // we currently store only impacts of fixes for methods on downstream dependencies.
       return null;
     }
-    OnMethod onMethod = fix.toMethod();
-    int predictedHash = MethodImpact.hash(onMethod.method, onMethod.clazz);
-    Optional<MethodImpact> optional =
-        this.methods.get(predictedHash).stream()
-            .filter(m -> m.node.location.equals(onMethod))
-            .findAny();
-    return optional.orElse(null);
+    return super.fetchImpact(fix);
   }
 
   /**
    * Returns the effect of applying a fix on the target on downstream dependencies.
    *
    * @param fix Fix targeting an element in target.
-   * @param fixesLocation Location in target that will be annotated as {@code @Nullable}.
+   * @param fixTree Fix tree in target that will be annotated as {@code @Nullable}.
    * @return Effect on downstream dependencies.
    */
-  private int effectOnDownstreamDependencies(Fix fix, Set<Location> fixesLocation) {
-    MethodImpact methodImpact = fetchMethodImpactForFix(fix);
+  private int effectOnDownstreamDependencies(Fix fix, Set<Fix> fixTree) {
+    MethodImpact methodImpact = fetchImpact(fix);
     if (methodImpact == null) {
       return 0;
     }
-    int individualEffect = methodImpact.getEffect();
     // Some triggered errors might be resolved due to fixes in the tree, and we should not double
     // count them.
     Set<Error> triggeredErrors = methodImpact.getTriggeredErrors();
     long resolvedErrors =
-        triggeredErrors.stream()
-            .filter(
-                error -> error.isSingleFix() && fixesLocation.contains(error.toResolvingLocation()))
-            .count();
-    return individualEffect - (int) resolvedErrors;
+        triggeredErrors.stream().filter(error -> error.isResolvableWith(fixTree)).count();
+    return triggeredErrors.size() - (int) resolvedErrors;
   }
 
   @Override
   public int computeLowerBoundOfNumberOfErrors(Set<Fix> tree) {
-    Set<Location> fixLocations = tree.stream().map(Fix::toLocation).collect(Collectors.toSet());
     OptionalInt lowerBoundEffectOfChainOptional =
-        tree.stream().mapToInt(fix -> effectOnDownstreamDependencies(fix, fixLocations)).max();
+        tree.stream().mapToInt(fix -> effectOnDownstreamDependencies(fix, tree)).max();
     if (lowerBoundEffectOfChainOptional.isEmpty()) {
       return 0;
     }
@@ -175,42 +168,41 @@ public class GlobalAnalyzerImpl implements GlobalAnalyzer {
 
   @Override
   public int computeUpperBoundOfNumberOfErrors(Set<Fix> tree) {
-    Set<Location> fixesLocation = tree.stream().map(Fix::toLocation).collect(Collectors.toSet());
-    return tree.stream().mapToInt(fix -> effectOnDownstreamDependencies(fix, fixesLocation)).sum();
+    return tree.stream().mapToInt(fix -> effectOnDownstreamDependencies(fix, tree)).sum();
   }
 
   @Override
-  public ImmutableSet<OnParameter> getImpactedParameters(Set<Fix> fixTree) {
+  public boolean triggersUnresolvableErrorsOnDownstream(Fix fix) {
+    return getTriggeredErrors(fix).stream().anyMatch(error -> !error.isFixableOnTarget(tree));
+  }
+
+  @Override
+  public ImmutableSet<Error> getTriggeredErrorsForCollection(Collection<Fix> fixTree) {
     return fixTree.stream()
         .filter(Fix::isOnMethod)
         .flatMap(
             fix -> {
-              MethodImpact impact = fetchMethodImpactForFix(fix);
-              return impact == null ? Stream.of() : impact.getImpactedParameters().stream();
+              MethodImpact impact = fetchImpact(fix);
+              return impact == null ? Stream.of() : impact.getTriggeredErrors().stream();
             })
         .collect(ImmutableSet.toImmutableSet());
   }
 
   @Override
-  public Set<Error> getTriggeredErrors(Fix fix) {
+  public ImmutableSet<Error> getTriggeredErrors(Fix fix) {
     // We currently only store impact of methods on downstream dependencies.
     if (!fix.isOnMethod()) {
-      return Set.of();
+      return ImmutableSet.of();
     }
-    MethodImpact impact = fetchMethodImpactForFix(fix);
+    MethodImpact impact = fetchImpact(fix);
     if (impact == null) {
-      return Set.of();
+      return ImmutableSet.of();
     }
-    return impact.getTriggeredErrors();
+    return ImmutableSet.copyOf(impact.getTriggeredErrors());
   }
 
   @Override
-  public void updateImpactsAfterInjection(Set<Fix> fixes) {
-    this.methods.values().forEach(methodImpact -> methodImpact.updateStatus(fixes));
-  }
-
-  @Override
-  public boolean isNotFixableOnTarget(Fix fix) {
-    return getTriggeredErrors(fix).stream().anyMatch(error -> !error.isFixableOnTarget(tree));
+  public void updateImpactsAfterInjection(Collection<Fix> fixes) {
+    this.store.values().forEach(methodImpact -> methodImpact.updateStatusAfterInjection(fixes));
   }
 }
